修改布局，添加收藏功（未有收藏列表界面）

--- a/app/src/main/res/layout/music_item.xml
+++ b/app/src/main/res/layout/music_item.xml
@@ -14,7 +14,7 @@
             android:layout_width="96px"
             android:layout_height="96px"
             android:layout_gravity="left"
-            android:src="@drawable/music"/>
+            android:src="@drawable/music" />
         <TextView
             android:id="@+id/musicId"
             android:layout_width="wrap_content"
@@ -22,13 +22,20 @@
             android:layout_gravity="center"
             android:text="id"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp" />
         <TextView
-            android:id="@+id/textView_musicName"
+            android:id="@+id/musicName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="musicname"/>
+            android:text="musicname"
+            android:layout_weight="1"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/unlove"
+            android:background="#000000"
+            android:id="@+id/imageButton_isLove"/>
     </LinearLayout>
     <View
         android:layout_width="match_parent"
