--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -11,7 +11,8 @@
         android:layout_height="180dp"
         android:src="@drawable/disk"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp"
+        android:layout_weight="5"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,7 +20,8 @@
         android:id="@+id/currentMusicName"
         android:gravity="center"
         android:layout_marginTop="20dp"
-        android:textSize="30dp"/>
+        android:textSize="30dp"
+        android:layout_weight="1"/>
 
     <SeekBar
         android:layout_width="match_parent"
@@ -27,14 +29,16 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:id="@+id/seekBar" />
+        android:id="@+id/seekBar"
+        android:layout_weight="1"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:layout_weight="1">
         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -55,7 +59,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:layout_weight="2" >
         <Button
             android:id="@+id/prevMusic"
             android:layout_width="60dp"
@@ -78,6 +83,6 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/loop"
-            android:layout_marginLeft="70dp"/>
+            android:layout_marginLeft="70dp" />
     </LinearLayout>
 </LinearLayout>
