--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -15,6 +15,9 @@
         android:id="@+id/menu_setting"
         android:title="设置" />
     <item
+        android:title="我的收藏"
+        android:id="@+id/myFavorite"/>
+    <item
         android:title="" />
     <item
         android:id="@+id/menu_exit"
