--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -7,12 +7,12 @@
     android:orientation="vertical">
 
     <ImageView
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="160sp"
+        android:layout_height="160sp"
         android:src="@drawable/disk"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
-        android:layout_weight="5"/>
+        android:layout_weight="3"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
